<resources>
    <string name="app_name">ProjeYarisma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Anasayfa</string>
    <string name="menu_howUse">Nasıl Yapılır?</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_help">Yardım</string>
    <string name="menu_settings">Ayarlar</string>
    <string name="menu_logout">Çıkış</string>
    <string name="menu_loginOrSignUp">Üye Ol veya Giriş Yap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
